@@ -7,6 +7,7 @@
   * Fixed a bug with textfields (date input), computed value and the datepicker
   * Updated Underscore to v1.3
   * Updated mobiscroll to 1.5.3
+  * Fixed a bug with M.ScrollView and the clear button
 
 ** Version 0.8 - Date 05.12.2011 **
 
